--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "house_rules",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://jgordy.github.io/House_Rules",
   "dependencies": {
     "immutability-helper": "^2.4.0",
     "js-cookie": "^2.1.4",
@@ -18,6 +19,11 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
+  },
+  "devDependencies": {
+    "gh-pages": "^1.0.0"
   }
 }
