Game form bug found. Issue with form-group class from bootstrap.

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "House Rules",
+  "name": "House Rules",
   "icons": [
     {
       "src": "favicon.ico",
