--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,9 +3,9 @@
   "name": "House Rules",
   "icons": [
    {
-    "src": "\/android-icon-192x192.png",
+    "src": "android-icon-192x192.png",
     "sizes": "192x192",
-    "type": "image\/png",
+    "type": "image/png",
     "density": "4.0"
    }
   ],
