--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "house_rules",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://houserules.fun",
+  "homepage": "https://jgordy.github.io/house-rules/",
   "dependencies": {
     "immutability-helper": "^2.4.0",
     "js-cookie": "^2.1.4",
